Suppress lambda capture warning in StreamConnectionWorkQueue.cpp https://bugs.webkit.org/show_bug.cgi?id=286982

Reviewed by Chris Dumez.

Suppress the lambda capture static analyzer warning in StreamConnectionWorkQueue.cpp.

* Source/WTF/wtf/Compiler.h:
* Source/WebKit/Platform/IPC/StreamConnectionWorkQueue.cpp:
(IPC::StreamConnectionWorkQueue::startProcessingThread):
* Source/WebKit/SaferCPPExpectations/UncountedLambdaCapturesCheckerExpectations:

Canonical link: https://commits.webkit.org/289774@main